--- a/byungki/201903a/default.html
+++ b/byungki/201903a/default.html
@@ -70,7 +70,7 @@ function activeTabMenu(thisTabNavItems, thisTabContentItmes, clickedIdx){
     classControl(thisTabContentItmes, clickedIdx, 'show');
 }
 
-//Fn : 선택한 item의 부모의 자식 중 선택한 item의 index를 return > (stackoverflow 검색)
+//Fn : 선택한 item의 부모의 자식 중 선택한 item의 index를 return
 function getThisIdx(elem) {
     //type01
     //HTMLcollection > Array
