--- a/naram/201903a/index.html
+++ b/naram/201903a/index.html
@@ -70,8 +70,8 @@
 
                 /* 탭 클래스 초기화 */
                 for(var j = 0; j < tab.length; j++){
-                    tab[j].classList = clList.replace(/active/g, '');   //교체할 클래스 위치에 따라 정규식 수정 필요, 정규식은 구글링하자
-                    tabCont[j].classList = clList.replace(/show/g, '');      
+                    tab[j].className = clList.replace(/active/g, '');   //교체할 클래스 위치에 따라 정규식 수정 필요, 정규식은 구글링하자
+                    tabCont[j].className = clList.replace(/show/g, '');      
                 }
                 /* //탭 클래스 초기화 */
 
