--- a/changsub/201903a/tab.html
+++ b/changsub/201903a/tab.html
@@ -24,12 +24,13 @@
 			for (var i = 0; i < tabEl.length; i++) {
 				tabEl[i].querySelector("a").onclick = function (){// 탭 클릭 이벤트
 					if(this.parentNode.className == "active"){// 클릭한 탭이 열려있을 경우
-						this.parentNode.className = "";// 클릭한 탭의 클래스 삭제
-						for(var j = 0; j < tabEl.length; j++){
-							if(this.parentNode.parentNode == tabEl[j].parentNode){// 같은 부모를 가진 탭만 걸러준다
-								conEl[j].className = "";// 선택된 컨텐츠의 클래스 삭제
-							};
-						};
+						//this.parentNode.className = "";// 클릭한 탭의 클래스 삭제
+						//for(var j = 0; j < tabEl.length; j++){
+						//	if(this.parentNode.parentNode == tabEl[j].parentNode){// 같은 부모를 가진 탭만 걸러준다
+						//		conEl[j].className = "";// 선택된 컨텐츠의 클래스 삭제
+						//	};
+						//};
+						return false;
 					}else{// 클릭한 탭이 닫혀있을 경우
 						this.parentNode.className = "active";// 클릭한 탭의 클래스 추가
 						for(var k = 0; k < tabEl.length; k++){
