--- a/naram/201903a/index.html
+++ b/naram/201903a/index.html
@@ -66,8 +66,9 @@
             allTab[idx].addEventListener('click',function(){
                 var clList = this.className;    //className : 클래스 리스트
                 var tab = this.parentElement.querySelectorAll('li');    //내가 클릭한 li 선언
-                var tabCont = this.parentElement.parentElement.parentElement.querySelectorAll('.tabContentBox div');    //내가 클릭한 탭의 관련 콘텐츠들만 선언
-                console.log(clList);
+                var tabCont = this.parentElement.parentElement.parentElement.querySelectorAll('.tabContentBox div');    
+                //내가 클릭한 탭의 관련 콘텐츠들만 선언
+                
                 /* 탭 클래스 초기화 */
                 for(var j = 0; j < tab.length; j++){
                     tab[j].className = clList.replace(/active/g, '');   //교체할 클래스 위치에 따라 정규식 수정 필요, 정규식은 구글링하자
@@ -78,6 +79,7 @@
                 allTab[idx].className += 'active';  //클릭 li에 클래스 추가
                 allCont[idx].className += ' show';   //해당 div에 클래스 추가
             });
+            //li 클릭시 div에 active 클래스 추가되는 현상 수정할 것 - 20190407
         }
 
         for (var i = 0; i < allTab.length; i++){    //document에 있는 모든 탭메뉴 버튼에 자신의 index를 파라미터로 함수 선언
